<resources>
    <string name="app_name">Calculo Viagem</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="price_liter">Preço por litro</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="km_liter">Km por litro</string>
    <string name="spend_total">GASTO TOTAL PREVISTO:</string>
    <string name="value_total">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="Fill_in_the_empty_fields">Preencha os campos vazios</string>
    <string name="clear">LIMPAR</string>
</resources>